--- a/gitops-myapp/myapp/values.yaml
+++ b/gitops-myapp/myapp/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 2
 
 image:
-  repository: devangkubde88/myapp
+  repository: devangkubde88/my-docker-app
   tag: latest
   pullPolicy: Always
 
